# bash-assistant

./: .gitignore  .pre-commit-config.yaml  README.md  ai  bai.py  bai.sh  constants.py  default_config.py  main.py  pyproject.toml  utils.py
bai/: bai.py  constants.py  default_config.py  utils.py  ynab.py
bai/pages/: bai_web.py  battery.py  dashboard.py  fix.py
chaty/: .gitignore  llms.py  main.py  messages.py  settings.py  tools.py  v4.py  web_base.py
chaty/.chainlit/: config.toml
scripts/: 2text  bai  dcron.sh  edit-ovh.sh  fjq  ics-import  prepare-commit-msg
services/: focus-helper.service
src/: bai.py  commits.py  constants.py  dcron.py  default_config.py  focus_helper.py  llms.py  models.py  ovh_tools.py  prompts.yaml  speech_to_text.py  utils.py  web.py  web2.py  ynab.py
src/pages/: bai_web.py  battery.py  dashboard.py  fix.py  habits.py  tree_book.py
tests/: test_habits_app.py
