[tool.poetry]
name = "bai"
version = "0.1.0"
description = ""
authors = ["ddorn <diego.dorn@free.fr>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prompt-toolkit = "^3.0.41"
openai = "^1.3.5"
click = "^8.1.7"
rich = "^13.7.0"
typer = "^0.9.0"
pillow = "^10.2.0"
pandas = "^2.2.0"
requests = "^2.31.0"
anthropic = "^0.18.1"
sounddevice = "^0.4.6"
matplotlib = "^3.8.4"
pyaudio = "^0.2.14"
pymp3 = "^0.2.0"
streamlit = "^1.33.0"
streamlit-pills = "^0.3.0"
piexif = "^1.1.3"
plotly = "^5.22.0"

[tool.poetry.scripts]
bai = 'bai.bai:app'

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
