[project]
name = "bai"
version = "0.1.0"
description = ""
license = "WTFPL"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "prompt-toolkit>=3.0.41",
    "openai>=1.41.1",
    "click>=8.1.7",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pillow>=10.2.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "anthropic>=0.34.1",
    "sounddevice>=0.4.6",
    "matplotlib>=3.8.4",
    "pyaudio>=0.2.14",
    "pymp3>=0.2.0",
    "streamlit>=1.37.1",
    "streamlit-pills>=0.3.0",
    "piexif>=1.1.3",
    "plotly>=5.22.0",
    "textual>=0.58.1",
    "pyfiglet>=1.0.2",
    "tiktoken>=0.6.0",
    "inquirerpy>=0.3.4",
    "chainlit>=1.1.402",
    "ovh>=1.2.0",
]

[dependency-groups]
dev = [
    "hatch>=1.13.0",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.sdist]
packages = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
